[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "control-framework"
version = "0.1.0"
description = "UAV control framework"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
]

[tool.setuptools]
packages = ["control_framework"]